examples/test/testpolicy10549.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10549
  namespace: namespace452
spec:
  podSelector:
    matchLabels:
      key41: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value34
          key45: value28
      podSelector:
        matchLabels:
          key21: value6
          key19: value45
          key2: value30
